syntax = "proto3";
option go_package = "/pb";
package pb;

// 用户信息
message AccountInfo {
  int32  channel = 1;      // 渠道ID
  int32  platform = 2;      // 平台ID
  string openId = 3;   // sdk的openid
  int32  serverId = 4; // 所在游戏服id
  int64  uid = 5;      // 用户id
}
